--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -823,7 +823,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.5.b:0 "The Bundestag votes in favour, but demands concessions."
   germany.5.c:0 "The Bundestag refuses to acknowledge his claim."
 
-  germany.6.t:0 "Forming a New Government"
+  germany.6.t:0 "Forming a New Government" 
   germany.6.d:0 ""
   germany.6.a:0 "Approach von Kahr"
   germany.6.b:0 "Himmler's the man, he's never been wrong!"
@@ -834,52 +834,52 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.7.b:0 "They’ll have to make due with their current funding."
   germany.7.c:0 "Shut them down. This is nonsense."
 
-  germany.8.t:0 "The Pan-German Development Plan"
+  germany.8.t:0 "The Pan-German Development Plan" #doesn't need loc
   germany.8.d:0 ""
   germany.8.a:0 "An excellent idea!"
   germany.8.b:0 "We're not interested."
 
-  germany.9.t:0 "The Pan-German Common Market"
+  germany.9.t:0 "The Pan-German Common Market" #doesn't need loc
   germany.9.d:0 ""
   germany.9.a:0 "An excellent idea!"
   germany.9.b:0 "We're not interested."
 
-  germany.10.t:0 "The Pan-German Military Committee"
+  germany.10.t:0 "The Pan-German Military Committee" #doesn't need loc
   germany.10.d:0 ""
   germany.10.a:0 "An excellent idea!"
   germany.10.b:0 "We're not interested."
 
-  germany.11.t:0 "The Mittleuropa Programme"
+  germany.11.t:0 "The Mittleuropa Programme" #doesn't need loc 
   germany.11.d:0 ""
   germany.11.a:0 "An excellent idea!"
   germany.11.b:0 "We're not interested."
 
-  germany.12.t:0 "Investments from the Fatherland"
+  germany.12.t:0 "Investments from the Fatherland" #doesn't need loc
   germany.12.d:0 ""
   germany.12.a:0 "Oh, so now they remember we need money."
 
-  germany.13.t:0 "German Buyout in Bechuanaland"
-  germany.13.d:0 ""
+  germany.13.t:0 "German Buyout in Bechuanaland" 
+  germany.13.d:0 "Germany has offered to purchase Bechuanaland for a hefty price."
   germany.13.a:0 "We welcome the money!"
   germany.13.b:0 "Frankfurt is interfering in our markets!"
 
-  germany.14.t:0 "German Reconstruction Funding"
+  germany.14.t:0 "German Reconstruction Funding" #doesn't need loc
   germany.14.d:0 ""
   germany.14.a:0 "Thanks for the Help"
 
-  germany.15.t:0 "Germany sends Reinforcements"
+  germany.15.t:0 "Germany sends Reinforcements" #doesn't need loc
   germany.15.d:0 ""
   germany.15.a:0 "Excellent"
 
-  germany.16.t:0 "Germany sends Reinforcements"
+  germany.16.t:0 "Germany sends Reinforcements" #doesn't need loc
   germany.16.d:0 ""
   germany.16.a:0 "Excellent"
 
-  germany.17.t:0 "German Diplomatic Recognition"
+  germany.17.t:0 "German Diplomatic Recognition" #doesn't need loc
   germany.17.d:0 ""
   germany.17.a:0 "A toast to our German comrades!"
 
-  germany.18.t:0 "German Military Mission in China"
+  germany.18.t:0 "German Military Mission in China" #doesn't need loc
   germany.18.d:0 ""
   germany.18.a:0 "We love our Germans, wonderful people. Best people."
 
@@ -892,15 +892,15 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.20.a:0 "Mobilize the Army!"
 
   germany.21.t:0 "The French are on the Move"
-  germany.21.d:0 ""
+  germany.21.d:0 "The blasted French have torn up the Treaty of Tours and have once again set Europe down the path war. Only an iron resolve will put the Pacte Revanchist back where they belong. For Germany and Europe, death to the invaders!"
   germany.21.a:0 "This is our opportunity."
 
   germany.22.t:0 "Frankfurt has Fallen"
-  germany.22.d:0 ""
+  germany.22.d:0 "When France attacked, many within our military feared defeat, right now it seems as though those fears are being realised.\n\nFrench forces entered the capital not long ago, our military assets within the city held them off as long as they could, but it did not last. The invaders managed to prevent any reinforcements by taking the roads and railway links immediately. Without any kind of relief, the city was doomed.\n\nFortunately, most of the government ministers had been evacuated days ago, so our government remains largely intact. And civilians within the city are organising resistance against the French occupation. But even as we draft plans to retake the city, this is without a doubt a major blow to our war effort."
   germany.22.a:0 "Re-establish a temporary capital in Munich"
 
   germany.23.t:0 "Munich has Fallen"
-  germany.23.d:0 ""
+  germany.23.d:0 "The situation grows even direr every day.\n\nDespite the best efforts of our military, it seems the French advance cannot be stopped. Our already battered armies that stood in Munich’s defence were completely routed. Their divisions moved swiftly through any breach in the line and exploited it. Despite its easily defensible position, the city itself fell with little fighting. As most of its defensive garrison has either been redirected elsewhere or was already destroyed.\n\nWith Munich’s loss, we must have the possibility of fleeing Germany as the military situation is becoming increasingly untenable. Diplomatic overtures and requests for exile have already been made to other nations, as a contingency if our colonies fall too. Even some of the more idealistic of our military and population are seeing the writing on the walls.\n\nIf we don’t turn this around soon, Germany will fall."
   germany.23.a:0 "This can't go on much longer."
 
   germany.24.t:0 "The Munich Coup" # not used currently
@@ -1208,7 +1208,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   #germany.123.d:0 "Quite suprisingly the Danubian Confederation has accepted our ultimatum.\n\nDespite great backlash in Budapest the Danubian Governement decides to accept the terms and safeguard their independence. The German Government is somewhat relieved as this will hopefully boost Germany's International Standing and their approval by the people.\nAt first the Army was also disappointed but is now fine with the situation as they can fully focus on France and Russia without worries of a new front opening up."
   #germany.123.a:0 "Who said that we could not be friends?"
 
-  germany.124.t:0 "Germany proposes Economic Treaty"
+  germany.124.t:0 "Germany proposes Economic Treaty" #doesn't need loc
   germany.124.d:0 ""
   germany.124.a:0 "We can not reject this offer."
 
@@ -1229,24 +1229,24 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.128.d:0 "Quite suprisingly the Empire of Yugoslavia has accepted our ultimatum.\n\nDespite great backlash in Belgrade, the Yugoslavian Monarchy decided to accept our terms and safeguard their independence. The German Government is somewhat relieved as this will hopefully boost Germany's International Standing and their approval by the people.\nAt first the Army was also disappointed but is now fine with the situation as they can fully focus on France and Russia without worries of a new front opening up."
   germany.128.a:0 "A suprising development"
 
-  germany.129.t:0 "Germany proposes Economic Treaty"
+  germany.129.t:0 "Germany proposes Economic Treaty" #doesn't need loc
   germany.129.d:0 ""
   germany.129.a:0 "We can not reject this offer."
 
-  germany.130.t:0 "Growing Pro-German Movement"
+  germany.130.t:0 "Growing Pro-German Movement" #doesn't need loc
   germany.130.d:0 ""
   germany.130.a:0 "We need to be careful."
 
-  germany.131.t:0 "Governor of Holstein almost shot"
+  germany.131.t:0 "Governor of Holstein almost shot" #doesn't need loc
   germany.131.d:0 ""
   germany.131.a:0 "Those damn terrorists!"
  
-  germany.132.t:0 "German Protest March in Kiel"
+  germany.132.t:0 "German Protest March in Kiel" #doesn't need loc
   germany.132.d:0 ""
   germany.132.a:0 "Crackdown with Force on this ungrateful bastards."
 
-  germany.133.t:0 "The Danish opened fire on peaceful protests."
-  germany.133.d:0 ""
+  germany.133.t:0 "The Danish opened fire on peaceful protests." 
+  germany.133.d:0 "The vile Danish government has been cracking down on various pro-German unification protests, the time has come to force their governemnt to cede Schleswig-Holstein to us else they face war."
   germany.133.a:0 "They have lost the right to rule Holstein."
   
   germany.134.t:0 "Ultimatum from Germany"
@@ -1270,7 +1270,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.138.d:0 ""
   germany.138.a:0 "Inform Dönitz."
 
-  germany.139.t:0 "Australie joins our Pact"
+  germany.139.t:0 "Australie joins our Pact" #doesn't need loc
   germany.139.d:0 ""
   germany.139.a:0 "Le Frère let's fight together again!"
 
