German event loc done

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1113,7 +1113,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.52.a:0 "Believe in the Future, my Friends!"
   
   germany.53.t:0 "A Chat with the Kaiserin"
-  germany.53.d:0 ""
+  germany.53.d:0 "If it wasn’t for the stressful reality that was governing a nation half divided Elisabeth would have already been in bed. Thalmann had kept the Kaiseress occupied for some time now with his passionate discussion of socialist thought and how the queen could best implement the ideological principles into Germany. The queen whilst almost half asleep had taken a keen interest into Thalmann’s points, nodding her head both in sincere agreement with his statements and simply wishing to postpone the rest of the discussion until she had good nights rest. But Thalmann had continued the conversation well into the night, eventually Elisabeth intervened, “Thalmann can we not continue this conversation tomorrow after supper?”."
   germany.53.a:0 "For a Free and United Europe."
   
   germany.54.t:0 "Stresemann Resigns - The Government Falls"
@@ -1147,11 +1147,11 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.60.a:0 "Confined to the Dustbin of History"
 
   germany.61.t:0 "A New Kaiser - A New Beginning"
-  germany.61.d:0 ""
+  germany.61.d:0 "Oh, the sweet feeling of power. Knowing that one’s nation rested upon the final word of its ruler. Germany was no exception, with Franz Ferdinand proclaimed Germany’s newest Kaiser after Rudolf’s abdication many aren’t surprised by the direction this seemingly new Germany was taking. As for Ferdinand’s coronation it was nothing short of grand, held in the historic Castle of Friedberg the event had housed well over a hundred guests across Europe from various royal families, with the most intriguing moment of the festive night being Ferdinand’s speech. Whilst rather short he made clear that Germany had grand ambitions that rivalled that of the empires of old, finally closing his speech with a few captivating final words. “If Germany is to be the Shepard of continental Europe, then she shall do as she pleases.” The crowd erupted in a thunderous applause and the coronation continued late into the night."
   germany.61.a:0 "Long Live Franz Ferdinand the Second"
 
   germany.62.t:0 "A Talk with the Kaiser"
-  germany.62.d:0 ""
+  germany.62.d:0 "Arthur Moeller van den Bruck had spent the past two hours debating the social, political, and economic policies of the German nation with Ferdinand. Both had come to a resolute agreement that this new Germany would pursue rather expansionist policies, justifying their opinions by pointing out the burden the nation had in European politics. Then came the discussion around the ideal German culture and what Arthur and Ferdinand would consider to be a ‘good German’. Immediately they agreed that family would play a pivotal role in their shared vision of Germany, with conservative values being the foundation upon which these families would function. For hours they discussed the nitty gritty details of their policies until they had created what they believed to be the perfect plan for the German people and nation.\n\nWith a quick stroke of a pen both Ferdinand and Arthur signed their jointly created document, a few hours later the ‘Plan of National Reconstruction and Rejuvenation’ had been ratified. A new German century had now begun."
   germany.62.a:0 "Germany will be revived in Body and Soul"
 
   germany.63.t:0 "Clearing out the Jacobins from Saxony"
@@ -1263,18 +1263,18 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.136.b:0 "We shall never work with you!"
 
   germany.137.t:0 "Australie accepts the Proposal!"
-  germany.137.d:0 ""
+  germany.137.d:0 "At long last, our diplomatic corp can let out a sigh of relief. As French aggression grows each day, as does the risk of invasion, many within our high command admit that we need promises of safety for our colonies. Just a few days ago, our diplomats sent envoys to the former French colony of Australie. Having broken free from their former colonial masters, we hoped to bank on anti-french sentiment within the nation to secure their support.\n\nOur hard work has paid off.\n\nIn exchange for Port Phillipe and Van Diemensland, Australie has signed an agreement to leave our remaining colonies in the region alone. Though time will tell if they keep to their work, this is a good sign for our presence in the region. We can now direct more of our resources towards defending Germany itself and some of Admiral Dönitz’s fears have been alleviated.\n\nWe may stand a fighting chance now."
   germany.137.a:0 "This time we will fight together."
 
   germany.138.t:0 "Australie rejects our Proposal!"
-  germany.138.d:0 ""
+  germany.138.d:0 "Today, we face a new diplomatic failure. As French aggression grows each day, as does the risk of invasion, many within our high command admit that we need promises of safety for our colonies. Just a few days ago, our diplomats sent envoys to the former French colony of Australie. Having broken free from their former colonial masters, we hoped to bank on anti-French sentiment within the nation to secure their support.\n\nOur work has sadly failed to bear fruit.\n\nAustralie has refused our offer of a non-aggression pact in exchange for some of our colonial holdings. There are many both in Germany proper and our colonies who fear that any war with France will be exploited by Australie to take our holdings by force. While this refusal does not guarantee an invasion will happen, it is a major cause for concern."
   germany.138.a:0 "Inform Dönitz."
 
   germany.139.t:0 "Australie joins our Pact" #doesn't need loc
   germany.139.d:0 ""
   germany.139.a:0 "Le Frère let's fight together again!"
 
-  germany.150.t:0 "A New Neighbour"
+  germany.150.t:0 "A New Neighbour" #doesn't need loc
   germany.150.d:0 ""
   germany.150.a:0 "We have to stand together against the oncoming storm."
 
