German foci loc
some more German LOC Foci done

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -287,12 +287,19 @@
   PB_GER_Status_Of_The_Empire:0 "Status of the Empire"
   PB_GER_Status_Of_The_Empire_desc:0 "Our colonies in Africa and Asia were left to fend for themselves whilst we were tackling the Pacte threat, however now that the war is over we can finally assist our long abandoned colonies."
   PB_GER_European_Common_Market:0 "Establish a Common German Market"
+  PB_GER_European_Common_Market_desc:0 "We may have won the war militarily, but economically we are in ruins. And so is the rest of the continent, so the National Government proposes a treaty with our continental neighbours, Dietsland, Denmark, Sweden and Switzerland. This treaty or agreement will establish a common European market in which all members are allowed to trade freely without tarrfis or blockades. Some people have started to too call the treaty \"The New Europe Agreement\". Hopefully we can expand this treaty too other nations, and we can keep Europe in peace because of our economic ties."
   PB_GER_Never_Forget:0 "Never Forget"
+  PB_GER_Never_Forget_desc:0 "War comes at a cost. A cost of men, money, resources and much more. Though we now stand victoriously in France, and have installed our puppet. The question now is whether we want to forgive the French people for all they have caused. We believe we SHOULD forgive them, they caused the war, they killed our heroic soldiers. The French people should however not pay for the actions their government did. They should be forgivven, and be brought with us together into a new era of peace in which they can actively enroll in international politics and in international trade by our side. We shall forgive them!"
   PB_GER_Never_Forgive:0 "Never Forgive"
+  PB_GER_Never_Forgive_desc:0 "War comes at a cost. A cost of men, money, resources and much more. Though we now stand victoriously in France, and have installed our puppet. The question now is whether we want to forgive the French people for all they have caused. We believe we should NOT forgive them, they caused the war, they killed our heroic soldiers. They should pay by being isolated, in ruins and occupied forever. We can never again let any French man do that too our great nation ever again, we shall never forgive them!"
   PB_GER_The_Franco_German_Foreign_Legion:0 "The Franco-German Foreign Legion"
+  PB_GER_The_Franco_German_Foreign_Legion_desc:0 "The French Foreign Legion is a well known army consisting of French and other soliders. It is a force to be reckoned with. But since we now stand victorious once more, we do not wish to disband the famed Legion, but rather add to it by creating the French-German legion. Its purpose will be basically the same as the French one, but will also consider German interests, and will have a German commander from time to time. As there is now peace in Europe we have decided to rebrand it as an interventionist force for colonial wars, rather than a real legion for a real war. And just like the French one, we won't only be accepting German and French citizens into it, but also all others who wish to join or who we ask to join it."
   PB_GER_The_Alsace_Issue:0 "The Alsace Issue"
+  PB_GER_The_Alsace_Issue_desc:0 "The French are in no position to bargain, yet we do hold sympathies for the French people somewhat. And especially on the topic of the Imperial Province of Alsace-Lorraine we have decided that in order to ensure peace, the French government will be forced to give up their claim on the province of Alsace-Lorraine, and that they will never try to claim the land again or fight a war for it. This agreement will be known as the Eternal Treaty of Strasbourg to make sure they can never break it."
   PB_GER_Looking_Forward:0 "Looking Forward"
+  PB_GER_Looking_Forward_desc:0 Now that all nations have started to rebuild and make use of the new free trade agreement, we believe it is finally time to say we are looking forward to a bright future. A future in which our children won't have endure war, depression, ruins and all the other horrors that come with fighting in a global conflict. A future in which technology, science and culture will flourish and where people can express their freedoms and thoughts. A lasting peace shall bring us greatness!"
   PB_GER_A_Dream_Of_A_Greater_Europe:0 "A Dream of a §YGreater Europe§!"
+  PB_GER_A_Dream_Of_A_Greater_Europe_desc:0 "Now that we have established our Free Trade bloc, rebuilt the European countries, made new friends, formed new treaties. Now that all of that and more has been achieved, we believe it is time to say goodbye to the old borders of Europe, the old idea of the nation state, it is time to establish a great European nation in peace and without conflict. Europe may be the cause of much death, of much destruction, but together we have achieved more than any one man can dream of. What is an ocean without a wave, a city without a street, they are different things, yet they go to together and live in harmony."
   
   PB_GER_Rudolf_Crisis:0 "The Abdication Crisis"
   PB_GER_Rudolf_Crisis_desc:0 "Today, the unthinkable has happened. Kaiser Rudolf II has announced that effective immediately, he will abdicate the throne. In his old age, His Majesty feels that he can no longer properly execute the duties of the throne and the throne will soon pass to his only child, Princess Elisabeth. Though this alone would not be a great crisis for our country, the unstable nature of this all has caused Gustav Streseman and his cabinet to resign. Per the German constitution, fresh elections must be held soon to form a new government, even as the political situation has become increasingly polarized without Rudolf's guiding hand at the helm. It seems the months ahead will be a time of chaos."
@@ -483,6 +490,7 @@
   PB_GER_Agriculture_Mechanization_desc:0 "The needs of the people increase everyday, which also means filling their bellies. Thus it is important we increase our output of our agricultural sector. With the new mechanization of the farmers work tools, we believe with a well created program in which the farmers of Germany can borrow machinery from the state until they can pay for it, can increase our effieceny and output greatly to meet the ever growing demands of the people. We need to make this program as lucrative as possible, by making sure there are little to no draw backs of making use of the program for farmers."
   PB_GER_Central_European_Pillar:0 "The Central Pillar of Europe"
   PB_GER_Central_European_Pillar_desc:0 "Finally the new Germany has achieved something the previous governments have failed at, a full economic recovery. We may have been severly weakened by the stock crash of 1910, which put our nation and its people into an almost everlasting depression. We can now say with confidence we have come out of the depression stronger than ever, and able to take on any foe who wishes to anger or pick a fight with us."
+  PB_GER_British_Nucleur_Programm_desc:0 "Classified document number 283, codename \"Project Armageddon\", is a top secret nucleur program started by the British and is now being helped by German researchers and scientists. With an agreement being made in 1929 to share all knowledge of nucleur technology with eachother, so both nations are able to create the bomb. The intentions for the use of the bomb are still unknown, not only to the general public, who don't know of its existence, but also to the scientists who are creating it. A flash of light can kill, just because someone said yes. End of recording."
 
   PB_GER_Empire_Management:0 "Büro für Konoliale Verwaltung"
   PB_GER_Empire_Management_Africa:0 "Development in Central Africa"
@@ -650,7 +658,7 @@ PB_GER_China_Management:0 "Deutchsland in China"
   PB_GER_Intelligence_Agency_Nuclear_Tech:0 "Einstein-Braun Proposal"
 
   PB_GER_German_Diplomacy:0 "Reassuring the Anglo-Saxon Friendship"
-  PB_GER_German_Diplomacy_desc:0 "TBD"
+  PB_GER_German_Diplomacy_desc:0 "Now that the continent is loading its guns once more, and threathening eachother again. It is time to make sure our allies are indeed our allies. And our most important allies are the British, we share a royal family, ideals a vast colonial empire and much more. We must make sure we are standing together against any upcoming enemies."
 
   PB_GER_Red_Diplomacy:0 "Everything for a Peaceful Europe"
   PB_GER_Improve_Spy_Network:0 "Spies in all of Europe"
@@ -666,25 +674,25 @@ PB_GER_China_Management:0 "Deutchsland in China"
   PB_GER_Approaching_Northern_Europe:0 "Approaching the Scandinavia"
 
   PB_GER_Liberal_Diplomacy:0 "Protecting Germany at all Costs"
-  PB_GER_Liberal_Diplomacy_desc:0 "TBD"
+  PB_GER_Liberal_Diplomacy_desc:0 "We may have our good friends the British on our side, but they are not on the continent. Thus we must protect ourselves against our rival continental rivals, we'll do this by constructing a defensive line of forts on our borders, this should protect or atleast slow down the enemies advance in any upcoming war."
   PB_GER_Hugenberg_Line:0 "The Hugenberg Line"
-  PB_GER_Hugenberg_Line_desc:0 "TBD"
+  PB_GER_Hugenberg_Line_desc:0 "We must begin construction immideatly on these forts. Starting with the Hugenberg line, which will protect us from our enemies by having very good posisitons to counter enemy troops. This Hugenberg line will hopefully do its job in any upcoming continetal war."
   PB_GER_Emergency_Directives:0 "German-British Army Training"
-  PB_GER_Emergency_Directives_desc:0 "TBD"
+  PB_GER_Emergency_Directives_desc:0 "The chance of war is increasing everyday, so it is now of great importance we will be able to coordinate well with our allies. Not only by forming a good line of communications between us and having a simple command chain so orders can be sent to both armies quickly, but also by performing a military excersice. By doing a military excersice, our combined troops and general will learn too cooperate on the battlefield and hopefully train to capture positions and objectives quickly and efficiently."
   PB_GER_War_Rationing_Plan:0 "The War Rationing Plan"
-  PB_GER_War_Rationing_Plan_desc:0 "TBD"
-  PB_GER_Rhine_Line:0 "Die Wacht am Rhein"
-  PB_GER_Rhine_Line_desc:0 "TBD"
-  PB_GER_Woman_In_Military:0 "Woman in the Airforce"
-  PB_GER_Woman_In_Military_desc:0 "TBD"
-  PB_GER_Colonial_Army:0 "Increase the Colonial Army"
-  PB_GER_Colonial_Army_desc:0 "TBD"
-  PB_GER_Colonial_Soldiers:0 "Improve Professionalism for Colonial Soldiers"
-  PB_GER_Colonial_Soldiers_desc:0 "TBD"
-  PB_GER_Argonne_Line:0 "Fortifications in the Argonne"
-  PB_GER_Argonne_Line_desc:0 "TBD"
+  PB_GER_War_Rationing_Plan_desc:0 "Not only will our troops need rations and supplies, so will our citizens. So a program will be set up in which we will have an efficient way of producing rations for our population, and the program will also include importing food from our colonies and allies whenever possible. This combined with the staunch German attitude should mean we will be able to outproduce, outhold and defeat our enemies."
+  #PB_GER_Rhine_Line:0 "Die Wacht am Rhein"
+  #PB_GER_Rhine_Line_desc:0 "TBD"
+  #PB_GER_Woman_In_Military:0 "Woman in the Airforce"
+  #PB_GER_Woman_In_Military_desc:0 "TBD"
+  #PB_GER_Colonial_Army:0 "Increase the Colonial Army"
+  #PB_GER_Colonial_Army_desc:0 "TBD"
+  #PB_GER_Colonial_Soldiers:0 "Improve Professionalism for Colonial Soldiers"
+  #PB_GER_Colonial_Soldiers_desc:0 "TBD"
+  #PB_GER_Argonne_Line:0 "Fortifications in the Argonne"
+  #PB_GER_Argonne_Line_desc:0 "TBD"
   PB_GER_Civlian_Militia_Programm:0 "Emergency Militia Directive"
-  PB_GER_Civlian_Militia_Programm_desc:0 "TBD"
+  PB_GER_Civlian_Militia_Programm_desc:0 "The German army might be a mighty fine one, and will certainly be able to hold out against our enemies with the newly built forts, new technolgy and new doctrines. But in case we may lose a major battle, have an epidemic or become involved in another conflict. Then it is important we have a backup militia force to deal with those threaths and possible setbacks. The militia will only be put in use when absolutely necessary, and won't be used as conventinal troops."
   PB_GER_National_Spirit:0 "Glorify our National Spirit"
   PB_GER_National_Spirit_desc:0 "TBD"
   PB_GER_Alp_Factories:0 "The Alp Factories"
