I have done nothing but mod for the last eight hours

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -895,6 +895,7 @@
   PB_ENG_Parliament_Suspended_Tooltip:0 "Parliament has §Rnot§! been suspended\n"
   PB_ENG_Parliament_Is_Completing_Parliament_Action:0 "Is §Rnot§! already conducting a parliamentary action"
 
+  PB_ENG_AI_Parliament_Cheat:0 "Definitely not an AI cheat decision to make Britain work"
   PB_ENG_Meet_with_Unions:0 "Meet with Union Members"
   PB_ENG_Meet_with_Veterans:0 "Meet with the Veterans' Associations"
   PB_ENG_Meet_with_Industrialists:0 "Meet with the Industrialists"
