--- a/localisation/english/PB_ICA_l_english.yml
+++ b/localisation/english/PB_ICA_l_english.yml
@@ -44,6 +44,6 @@
   ##########################
   ICA_citizens_army:0 "The Citizen's Army"
   ICA_citizens_army_desc:0 "Whilst some patriots joined our organisation from the ranks of the Irish Commonwealth Forces, the Irish Citizen's Army is largely formed of nothing more than the citizens of Ireland."
-  ICA_disunited_organisation:0 "Fragile Unity"
-  ICA_disunited_organisation_desc:0 "The Irish Citizen's Army is, of course, united around its leader in Michael Collins. However, under him there exists a dozen paramilitary groups, radical republicans, and others brought under the banner of Irish independence. A common enemy keeps us together, what shall happen when they are defeated?"
-  ICA_international_isolation:0 "Ireland Stands Alone!"
+  ICA_Fragile_Unity:0 "Fragile Unity"
+  ICA_Fragile_Unity_desc:0 "The Irish Citizen's Army is, of course, united around its leader in Michael Collins. However, under him there exists a dozen paramilitary groups, radical republicans, and others brought under the banner of Irish independence. A common enemy keeps us together, what shall happen when they are defeated?"
+  ICA_Ireland_Stands_Alone:0 "Ireland Stands Alone!"
