--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -660,18 +660,30 @@ PB_GER_China_Management:0 "Deutchsland in China"
   PB_GER_German_Diplomacy:0 "Reassuring the Anglo-Saxon Friendship"
   PB_GER_German_Diplomacy_desc:0 "Now that the continent is loading its guns once more, and threathening eachother again. It is time to make sure our allies are indeed our allies. And our most important allies are the British, we share a royal family, ideals a vast colonial empire and much more. We must make sure we are standing together against any upcoming enemies."
 
-  PB_GER_Red_Diplomacy:0 "Everything for a Peaceful Europe"
-  PB_GER_Improve_Spy_Network:0 "Spies in all of Europe"
-  PB_GER_Humanitarian_Organization:0 "Expand Humanitarian Organizations"
+  #PB_GER_Red_Diplomacy:0 "Everything for a Peaceful Europe"
+  #PB_GER_Red_Diplomacy_desc:0 "TBD"
+  #PB_GER_Improve_Spy_Network:0 "Spies in all of Europe"
+  #PB_GER_Improve_Spy_Network_desc0 "TBD"
+  #PB_GER_Humanitarian_Organization:0 "Expand Humanitarian Organizations"
+  #PB_GER_Humanitarian_Organization_desc:0 "TBD"
   PB_GER_Europe_Alliance_Network:0 "An European Bulwark against Extremism"
+  PB_GER_Europe_Alliance_Network_desc:0 "Here you want to be Lofn!"
   PB_GER_Europe_Military_Aid:0 "Helping our Allies"
+  PB_GER_Europe_Military_Aid_desc:0 "This one too please!"
   PB_GER_Europe_Vienna_Research_Collab:0 "The Vienna Research Collaboration"
-  PB_GER_Europe_Strength_Wallonia:0 "Protecting the Benelux"
+  PB_GER_Europe_Vienna_Research_Collab_desc:0 "Now that we have hopefully pleased the workers and the factory owners, it is time to also please the more intellectual ones from society. The science community has been a vital part of Germany since forever, and now it is time we give them them and the other scientists from the bloc the resources and oppurtunity they seek, by starting a collaboration project in which, centered in the city of Vienna, there will be a great science convention to host all the scientific communities from all over the bloc to discuss and present many great things. We hope many that many stunning inventions, innovations and weapons will be produced because of our great program."
+  #PB_GER_Europe_Strength_Wallonia:0 "Protecting the Benelux"
+  #PB_GER_Europe_Strength_Wallonia_desc:0 "TBD"
   PB_GER_Europe_Solidarity:0 "A Sense of Solidarity"
-  PB_GER_Europe_Future_Union:0 "The Beginning of an Union"
+  PB_GER_Europe_Solidarity_desc:0 "This one too please Lofn!"
+  #PB_GER_Europe_Future_Union:0 "The Beginning of an Union"
+  #PB_GER_Europe_Future_Union_desc:0 "TBD"
   PB_GER_Europe_Economic_Aid:0 "Worker Exchange Programms"
-  PB_GER_Approaching_Balkans:0 "Approaching the Balkans"
-  PB_GER_Approaching_Northern_Europe:0 "Approaching the Scandinavia"
+  PB_GER_Europe_Economic_Aid_desc:0 "Now that we have established our bloc known as the Hamburg League, we can begin cooperating with them much more than before. And a much proposed agreement that many people want to be put in place, is a workers exchange program or workers exchange agreement. In the program the workers are invited too come work in German factories, or the other way around. And in the Agreement, workers can freely travel, live and work wherever in the bloc they please. Hopefully this will increase our relations with the rest of the league and maybe increase efficiency and development in all kinds of sectors."
+  #PB_GER_Approaching_Balkans:0 "Approaching the Balkans"
+  #PB_GER_Approaching_Balkans_desc:0 "TBD"
+  #PB_GER_Approaching_Northern_Europe:0 "Approaching the Scandinavia"
+  #PB_GER_Approaching_Northern_Europe_dec:0 "TBD"
 
   PB_GER_Liberal_Diplomacy:0 "Protecting Germany at all Costs"
   PB_GER_Liberal_Diplomacy_desc:0 "We may have our good friends the British on our side, but they are not on the continent. Thus we must protect ourselves against our rival continental rivals, we'll do this by constructing a defensive line of forts on our borders, this should protect or atleast slow down the enemies advance in any upcoming war."
@@ -694,40 +706,41 @@ PB_GER_China_Management:0 "Deutchsland in China"
   PB_GER_Civlian_Militia_Programm:0 "Emergency Militia Directive"
   PB_GER_Civlian_Militia_Programm_desc:0 "The German army might be a mighty fine one, and will certainly be able to hold out against our enemies with the newly built forts, new technolgy and new doctrines. But in case we may lose a major battle, have an epidemic or become involved in another conflict. Then it is important we have a backup militia force to deal with those threaths and possible setbacks. The militia will only be put in use when absolutely necessary, and won't be used as conventinal troops."
   PB_GER_National_Spirit:0 "Glorify our National Spirit"
-  PB_GER_National_Spirit_desc:0 "TBD"
+  PB_GER_National_Spirit_desc:0 "Ever since the first man spoke German, he achieved something beautiful. And the more men that started to speak German, the more the collective of people known as Germans achieved in the great nations on the fertile planes of our tremendous nation. Thus to celebrate all these expectional achievements, we've decided to fund a extensive \"Propaganda\" campaign to inspire our population to strive further in life and achieve fantastic things. We hope to aspirie and inspire the youngsters of the nation to become scientists, proffesors, biologists, archeologists, historians, artists and much more too express their freedoms and open their hearts."
   PB_GER_Alp_Factories:0 "The Alp Factories"
-  PB_GER_Alp_Factories_desc:0 "TBD"
-  PB_GER_Great_Boost_Foward:0 "The Great Move Foward"
-  PB_GER_Great_Boost_Foward_desc:0 "TBD"
-  PB_GER_Investing_Into_the_End_of_War:0 "Everything to End the Suffering"
-  PB_GER_Investing_Into_the_End_of_War_desc:0 "TBD"
-  PB_GER_Fortify_The_Dutch_German_Border:0 "Fortify the Dutch-German Border"
-  PB_GER_Fortify_The_Dutch_German_Border_desc:0 "TBD"
+  #PB_GER_Alp_Factories_desc:0 "TBD"
+  #PB_GER_Great_Boost_Foward:0 "The Great Move Foward"
+  #PB_GER_Great_Boost_Foward_desc:0 "TBD"
+  #PB_GER_Investing_Into_the_End_of_War:0 "Everything to End the Suffering"
+  #PB_GER_Investing_Into_the_End_of_War_desc:0 "TBD"
 
   PB_GER_Search_For_Oil:0 "Our Oil Lifeline"
   PB_GER_Search_For_Oil_desc:0 "Every major country in the world now needs oil to maintain its global influence. Without oil there is no fuel to move our mechanized armies and there is no energy for our industry. However a lot of the sources of oil in the world lie in the hands of our rivals. However there is one place where the oil reserves remain quite untouched. Texas. When stability returns to the region of North America we can make a deal to gain access to their oil reserves."
 
   PB_GER_Black_Diplomacy:0 "Our New Destiny"
-  PB_GER_Aggressive_Doctrine:0 "The German Century"
-  PB_GER_Aggressive_Doctrine_2:0 "The German Century"
-  PB_GER_German_System_idea:0 "The German System"
+  PB_GER_Black_Diplomacy_desc:0 "Long enough have we, the German people, been opressed, violated and attacked. We must stand on our own feet, we don't need the British, we don't need any allies for that matter. It is important we defend our great nation all by ourselves and defeat our enemies at every battle no matter the cost. There must come a time where the European continent will be dominated by Germany, and by Germany alone. Everything shall revolve around us, no one would be able to challange us, defeat us or question us."
+  #PB_GER_Aggressive_Doctrine:0 "The German Century"
+  #PB_GER_Aggressive_Doctrine_desc:0 "TBD"
+  #PB_GER_German_System_idea:0 "The German System"
+  #PB_GER_German_System_idea_desc:0 "TBD"
   PB_GER_Demands_Danish:0 "Threatening the Danish"
   PB_GER_Demands_Danish_desc:0 "The Danish Government has gone too far. The brutal crackdown of the Germanic Movement in Kiel was inhuman and completely unnecessary. Despite there being one or three radicals, like in every movement, the movement and its supporters very largely peaceful and worked together with the Democratic Mechanisms. The Danish have demonstrated that they are not able to govern German People with their recent escalation. The United Kingdoms of Germany has come to the conclusion that the agreements with the Danish and Kiel Governments are not in effect anymore and they have lost their right to rule the region of Holstein. We demand that the region of Holstein becomes a part of the Volksstaat of Hannover."
   PB_GER_Warning_Swiss:0 "The Travancore Expedition"
   PB_GER_Warning_Swiss_desc:0 "The German government has invested quite a bit of money into the Indian nation of Travancore, resulting in a large and uncontested monopoly in the Travancorian economy. Some individuals in our cabinet believe we could coup the Indian Travancorian government and place someone a little more pr-German into a position of power."
-  PB_GER_Look_Balkans:0 "Look to the Balkans"
-  PB_GER_Look_Balkans_desc:0 "Look to the Balkans"
-  PB_GER_reinforcing_grip_over_europe:0 "Reinforcing Our Grip over Europe"
-  PB_GER_reinforcing_grip_over_europe_desc:0 "Reinforcing Our Grip over Europe"
-  PB_GER_taste_of_war:0 "A Taste of War"
-  PB_GER_taste_of_war_desc:0 "A Taste of War"
+  #PB_GER_Look_Balkans:0 "Look to the Balkans"
+  #PB_GER_Look_Balkans_desc:0 "TBD"
+  #PB_GER_reinforcing_grip_over_europe:0 "Reinforcing Our Grip over Europe"
+  #PB_GER_reinforcing_grip_over_europe_desc:0 "TBD"
+  #PB_GER_taste_of_war:0 "A Taste of War"
+  #PB_GER_taste_of_war_desc:0 TBD"
   PB_GER_German_System:0 "A German Europe"
-  PB_GER_German_System_desc:0 "A German Europe"
-  PB_GER_Limits_War_Economy:0 "The Limits of War Economy"
+  PB_GER_German_System_desc:0 "At night, when the sea cradles me and the pale star gleam lies down on its broad waves, then I free myself wholly from all activity and all the love and stand silent and breathe purely, alone, alone cradled by the sea that lies there, cold and silent, with a thousand lights. Then I have to think of my friends and my gaze sinks into their gazes and I ask each one, silent, alone \"Are you still mine?\". \"Is my sorrow a sorrow to you, my death a death?\" \"Do you feel from my love, my grief, just a breath, just an echo?\" And the sea peacefully gazes back, silent, and smiles no. And no greeting and now answer comes from anywhere. We have proved our worth on the continent, but we still have many places to go, many places to explore and conquer. We must be close to victory, we just can't smell it yet."
+  #PB_GER_Limits_War_Economy:0 "The Limits of War Economy"
+  #PB_GER_Limits_War_Economy_desc:0 "TBD"
   PB_GER_Dutch_Influence:0 "Purchase The Aru Islands"
   PB_GER_Dutch_Influence_desc:0 "Our far off colony in Asia is yearning for colonial expansion. We have managed to diplomatically pressure the Dutch colony of Batavia in the East Indies to sell us the Aru Islands. "  
-  PB_GER_Dalmatia_to_Italy:0 "Dalmatia to Italy?"
-  PB_GER_Dalmatia_to_Italy_desc:0 ""
+  #PB_GER_Dalmatia_to_Italy:0 "Dalmatia to Italy?"
+  #PB_GER_Dalmatia_to_Italy_desc:0 "TBD"
 
   PB_GER_German_A_Visit_to_Naples:0 "The Kaiser in Naples"
   PB_GER_German_Britian_Friendship_Treaty:0 "Reassuring our Friendship"
