--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -17,6 +17,7 @@
  battleship_desc:0 "The largest capital ship with the biggest guns and strongest armor that money can buy. Such an expensive investment deserves proper support of smaller screening ships."
  battle_cruiser:0 "Battlecruiser"
  battle_cruiser_desc:0 "A large capital ship often with offensive abilities close to those of a battleship, but with weaker armor traded for a faster speed."
+ convoy_1:0 "Convoy"
  convoy:0 "Convoy"
  convoy_desc:0 "Convoys used for international trade of goods and resources. Also used to ferry troops around and for performing naval invasions."
  sh_battleship:0 "Superheavy Battleship"
@@ -309,10 +310,11 @@
  infantry_weapons1933_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs. Improved weapon models and more specialized equipment."
 
  ###Wolfxe placeholders, don't forget to change these!
+ support_equipment_short:0 "Support Eq."
  support_equipment:0 "Support Equipment"
- support_equipment_desc:0 ""
+ support_equipment_desc:0 "Radios, Jeeps, Pontoons & other equipment used to support troops."
  support_equipment_1:0 "Support Equipment"
- support_equipment_1_desc:0 ""
+ support_equipment_1_desc:0 "Radios, Jeeps, Pontoons & other equipment used to support troops."
  motorized_equipment_1:0 "Motorised Equipment"
  motorized_equipment_1_desc:0 ""
  mechanized_equipment_1:0 "Mechanised Equipment I"
@@ -329,20 +331,36 @@
  infantry_equipment_3_desc:0 ""
  artillery_equipment:0 "Artillery Equipment"
  artillery_equipment_desc:0 ""
- artillery_equipment_1:0 "Artillery Equipment 1933"
- artillery_equipment_1_desc:0 ""
- artillery_equipment_2:0 "Artillery Equipment 1939"
- artillery_equipment_2_desc:0 ""
- artillery_equipment_3:0 "Artillery Equipment 1942"
- artillery_equipment_3_desc:0 ""
+ artillery_equipment_1:0 "Towed Artillery"
+ artillery_equipment_1_short:0 "Artillery"
+ artillery_equipment_1_desc:0 "Artillery refers to large-caliber weapons, such as cannons and howitzers that are operated by crews, which can project munitions far beyond the effective range of personal weapons."
+ artillery_equipment_2:0 "Improved Artillery"
+ artillery_equipment_2_desc:0 "New howitzer designs, taking advantage of new hydraulic recoil devices and longer barrels."
+ artillery_equipment_3:0 "Advanced Artillery"
+ artillery_equipment_3_desc:0 "Light-weight artillery capable of being broken down for transport, making it possible to bring artillery support to areas previously difficult to reach."
  anti_air_equipment:0 "Anti Air Equipment"
- anti_air_equipment_desc:0 ""
+ anti_air_equipment_desc:0 "Anti-air artillery is primarily designed to shoot down hostile planes, although the rapid fire cannons can also be effective against ground targets."
  anti_air_equipment_1:0 "Anti Air Equipment 1934"
- anti_air_equipment_1_desc:0 ""
+ anti_air_equipment_1_desc:0 "Anti-air artillery is primarily designed to shoot down hostile planes, although the rapid fire cannons can also be effective against ground targets."
  anti_air_equipment_2:0 "Anti Air Equipment 1940"
- anti_air_equipment_2_desc:0 ""
+ anti_air_equipment_2_desc:0 "Anti-air guns with longer cartridges and barrels, able to target high-flying aircraft."
  anti_air_equipment_3:0 "Anti Air Equipment 1943"
- anti_air_equipment_3_desc:0 ""
+ anti_air_equipment_3_desc:1 "An advanced mobile flak gun with greater reach and firing capacity, to combat even the fastest and highest-flying enemy aircraft."
+ rocket_artillery_equipment_1:0 "Towed Rocket Artillery"
+ rocket_artillery_equipment_1_short:0 "Rocket Artillery"
+ rocket_artillery_equipment_1_desc:0 "Rocket artillery is less accurate and has a much lower sustained rate of fire than batteries of traditional artillery guns. However, they have the capability of simultaneously hitting a target with multiple rockets with devastating effect."
+ rocket_artillery_equipment_2:0 "Advanced Rocket Artillery"
+ rocket_artillery_equipment_2_desc:0 "Spin-stabilized rockets, increasing the range of lighter artillery batteries."
+ anti_tank_equipment_2:0 "Improved Anti-Tank"
+ anti_tank_equipment_2_desc:0 "Larger caliber guns to combat heavier tanks with sloped armor."
+ anti_tank_equipment_3:0 "Advanced Anti-Tank"
+ anti_tank_equipment_3_desc:0 "Combining different kinds of new ammunition technology with guns with higher muzzle velocities, these anti-tank guns are prepared for whatever new armor our enemies may develop." 
+ anti_tank_equipment_1:0 "Towed Anti-Tank"
+ anti_tank_equipment_1_short:0 "Anti-Tank"
+ anti_tank_equipment_1_desc:0 "Artillery specialized in defeating armored targets like Tanks, it generally fires armor piercing shells."
+ artillery_equipment:0 "Towed Artillery"
+ artillery_equipment_short:0 "Artillery"
+ artillery_equipment_desc:0 "Artillery refers to large-caliber weapons, such as cannons and howitzers that are operated by crews, which can project munitions far beyond the effective range of personal weapons."
 
  gw_armored_car_equipment:0 "Interwar Armored Car"
  gw_armored_car_equipment_desc:0 "Where previous armored cars were simple commercial models with thin steel plating, this model was designed from the ground up to carry armor and light armament."
