Hurricane of LOC
Banananado.

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -565,33 +565,33 @@
   PB_ENG_better_support:0 "Deadly Precision from Above"
   PB_ENG_better_support_desc:0 "Bombers and zeppelins shall be updated with better targeting systems so that they can obliterate their objectives with the utmost accuracy. None shall hide under the eyes of Albion."
   PB_ENG_cheaper_support:0 "Prioritize Air-Support Design Schemes"
-  PB_ENG_cheaper_support_desc:0 ""
+  PB_ENG_cheaper_support_desc:0 "It has beecome all more evident these last decades that battle support is now more significant than ever. So a program has been started that will put scientists too work in developing Britains new Close Air Support aircraft too support our troops any war we may find ourselves in, in any future. These fine scientists should get us somewhat up to scratch."
   PB_ENG_air_research_one:0 "Expand Air Training Programs"
-  PB_ENG_air_research_one_desc:0 ""
+  PB_ENG_air_research_one_desc:0 "We must remember that we are the most technologicaly advanced nation on earth, and so are our planes. But we have been noticing lately that the new cadets have been having some issues with the new models of aircraft. So we've decided to expand and change the curriculum for then new airforce cadets to ensure they can actually use their aircraft and thus be of use to the nation."
   PB_ENG_air_research_two:0 "Hellfire from Above"
-  PB_ENG_air_research_two_desc:0 ""
+  PB_ENG_air_research_two_desc:0 "The enemy won't know what hit them, we are a shadow in the night, a wave in the ocean and a tree in a jungle. We have the advantage, we shall be victorious. Our fine pilots shall practice with dropping bombs on targets to make sure their aim is on point and ready for war. Our airforce shall rival all, defeat all and bring Hellfire From Above, so to speak."
   PB_ENG_britannia_air:0 "Brittania Rules the Skies"
-  PB_ENG_britannia_air_desc:0 ""
+  PB_ENG_britannia_air_desc:0 "Though you cannot see air. It is there. Someone is amongst the clouds. Amid crowds. A cloud of metal. A cloud in which to settle. But you, newest someone of the lot, You are not old enough to have done much mischief. I will get you a green coat out of China With dragons worked upon it. I will get you the scarlet silk trousers From the statue of the infant Christ at Santa Maria Novella. Lest they say we are lacking in taste. The world is your dressing room. Let's try not too make the air your tomb. Succeed and others will follow. Maybe all the way to Apollo. Up there he waits. Guarding many straits. And choosing much fate. The one for you and our state. -Erza Pound."
   PB_ENG_battleship:0 "Reinforce the Capital Fleet"
-  PB_ENG_battleship_desc:0 ""
+  PB_ENG_battleship_desc:0 "Our navy is already the strongest in the world and unbeatable. We don't need any of those new \"carriers\", we need good old ships which aren't expirimental and new. We need our ships to be predictable and reliable. So this program will be to invest in expanding our current fleet with new versions of old ships, and rennovating and replacing some of them."
   PB_ENG_bigger_guns:0 "Make the Seas Tremble"
-  PB_ENG_bigger_guns_desc:0 ""
+  PB_ENG_bigger_guns_desc:0 "No one should be able to oppose us upon the seven seas, not even the sea itself. It is vital we increase our firepower significantly to be able to effectively deal with any approaching foe in any future sea battle. Our ships shall do all the work, no air support needed. This program will be too invest in the upgrading and innovation of our firepower, tactics and doctrines for when we are out to sea. To see a battle."
   PB_ENG_better_armor:0 "All or Nothing Armor"
-  PB_ENG_better_armor_desc:0 ""
+  PB_ENG_better_armor_desc:0 "You know, a ship is nothing but a bunch metal welded together with an engine, some rooms and a gun on the top. But the most important resource aboard a ship during its sailing time, is obviously the oil on which the boat runs. So it is vital we protect it, by making a thick hull with which we shall keep it safe from any cannons. This program will focus on researching and innovating our ship hull technology to assure victory and little loss of resources during our plentyful sea battles."
   PB_ENG_carrier:0 "Expand the Carrier Fleet"
-  PB_ENG_carrier_desc:0 ""
+  PB_ENG_carrier_desc:0 "Embracing the future is the future, an odd statement, but a true one most certainly. Our airforce and navy must work in tandem to destroy our adversaries. We shall do this by funding a program which will develop and produce our very own carriers, able to counter any sea ferring rival we may encounter once we are upon the seven seas and engaged in war. Surely with this program we will be able to do all that effectively and more."
   PB_ENG_better_sorting:0 "Advanced Sortie Techniques"
-  PB_ENG_better_sorting_desc:0 ""
+  PB_ENG_better_sorting_desc:0 "When shall we strike? When shall we hit? We may not know, but our enemy doens't either. Advanced sortie techniques will make sure of our hit, if we cannot predict the waves, how can one expect an airplane in the sky? By changing and progressing our tactics and doctrines, we will be sure to hit them where and when they least expect it."
   PB_ENG_cheaper_cfandcas:0 "More Dependable Carrier Aircraft"
-  PB_ENG_cheaper_cfandcas_desc:0 ""
+  PB_ENG_cheaper_cfandcas_desc:0 "While we might have a collection of rather fine carriers amongst our navy, they are not perfect or one hundred procent ready or prepared for modern battles. This program aims to replace our old carriers, and develop new ones to counter our rivals ones. We must get our best minds on this to figure out the best designs for the best and mightiest navy in the world."
   PB_ENG_naval_research_one:0 "Tried and True Methods"
-  PB_ENG_naval_research_one_desc:0 ""
+  PB_ENG_naval_research_one_desc:0 "New tactics and doctrines might be nice and all for the new ships and designs, but one must not forget that the navy consists of various heeps of other ships and a crew too, which also all need to adapt and understand the new tactics which the whole navy shall use. So this program will hopefully provide those ships and their crews with the needed resources to fit in to modern sea battles."
   PB_ENG_naval_research_two:0 "Never Falter in their Missions"
-  PB_ENG_naval_research_two_desc:0 ""
+  PB_ENG_naval_research_two_desc:0 "You can never learn enough, and thus we've decided to invest in another program to teach our lovely marines even more about the seven seas and the monstorous battles that they will partake in when the time comes. This time the program includes new textbooks, a new curiculum and a more expansive set of subjects to ready our marines for anything that might be thrown at them in any given future."
   PB_ENG_britannia_waves:0 "Brittania Rules the Waves"
-  PB_ENG_britannia_waves_desc:0 ""
+  PB_ENG_britannia_waves_desc:0 " The shattered water made a misty din. Great waves looked over others coming in, and thought of doing something to the shore that water never did to land before. The clouds were low and hairy in the skies, like locks blown forward in the gleam of eyes. You could not tell, and yet it looked as if the shore was lucky in being backed by cliff, the cliff in being backed by continent; It looked as if a night of dark intent was coming, and not only a night, an age. Someone had better be prepared for rage. There would be more than ocean-water broken before God's last Put out the light was spoken. -Robert Frost."
   PB_ENG_britannia_world:0 "The Masters of the Earth"
-  PB_ENG_britannia_world_desc:0 ""  
+  PB_ENG_britannia_world_desc:0 "He is that fallen lance that lies as hurled, that lies unlifted now, come dew, come rust, but still lies pointed as it ploughed the dust. If we who sight along it round the world, see nothing worthy to have been its mark, it is because like men we look too near, forgetting that as fitted to the sphere, our missiles always make too short an arc. They fall, they rip the grass, they intersect The curve of earth, and striking, break their own; They make us cringe for metal-point on stone. But this we know, the obstacle that checked and tripped the body, shot the spirit on further than target ever showed or shone. -Robert Frost."  
   ##########################
   # IDEAS
   ##########################
