1937 Election Event Fix

--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -39,11 +39,15 @@
  LOADING_TIP_36:0 "You, the Poles, have a funny nature. When the people going along the road are attacked by a dog with its insistent and noisy barking, you immediately feel like jumping off the vehicle, standing on all fours and starting to bark back at it.\n- §YJózef Piłsudski§!"
  LOADING_TIP_37:0 "France cannot be France without greatness.\n- §YCharles de Gaulle§!"
  LOADING_TIP_38:0 "We crave for new sensations but soon become indifferent to them. The wonders of yesterday are today common occurrences.\n- §YNikola Tesla§!"
-
-
-
-
-
+ LOADING_TIP_39:0 "There are two kinds of scientific progress, the methodical experimentation and categorization which gradually extend the boundaries of knowledge, and the revolutionary leap of genius which redefines and transcends those boundaries.\n- §YNikola Tesla§!"
+ LOADING_TIP_40:0 "What, pray tell, will we do when these little homunculi awaken one day announce that they have no further need for us?\n- Except, §YArguments against Automation§! 1921"
+ LOADING_TIP_41:0 "And what of the immortal soul in such transactions? Can this machine transmit and reattach it as well?\n- Excerpt, §YPope Gregory XVII§!, 1922 Papal Dispensation"
+ LOADING_TIP_42:0 "We shall take only the greatest minds, the finest soldiers, the most faithful servants. We shall multiply them a thousandfold and release them to usher in a new era of glory.\n- Excerpt, §YThe Doctrine of Sociogenetics§!, 1862"
+ LOADING_TIP_43:0 "Not only does God play dice, the dice are loaded.\n-§YAlbert Einstein§!"
+ LOADING_TIP_44:0 "Tyranny, you say? How can you tyrannize someone who cannot feel pain?\n-Excerpt, §YCombat Amalgamate Sapience Study§!, 1932"
+ LOADING_TIP_45:0 "Energy is the currency of the future.\n-§YSir Thomas Edison§!"
+ LOADING_TIP_46:0 "In former times the energy monopoly was called The Power Company; we intend to give this name an entirely new meaning.\n-§YSir Thomas Edison§!"
+ LOADING_TIP_47:0 "By what right does this forgotten future seek to deny us our birthright? None I say! Let us take what is ours, chew and eat our fill.\n-§YSir Thomas Edison§!"
 
 
 
